# GKL

./: .gitmodules  CMakeLists.txt  build.gradle  build.sh
gradle/wrapper/: gradle-wrapper.properties
src/examples/SmithWaterman/: SmithWatermanUnitTest.c
src/main/native/common/: avx.h
src/main/native/compression/: CMakeLists.txt
src/main/native/compression/otc_zlib/: CMakeLists.txt  Makefile.in  deflate.c
src/main/native/pairhmm/: CMakeLists.txt  Context.h  IntelPairHmm.cc  IntelPairHmmCSource.cpp  avx512_impl.cc  pairhmm_common.h
src/main/native/pdhmm/: CMakeLists.txt  IntelPDHMM.cc  MathUtils.cc  MathUtils.h  avx2-functions.h  pdhmm-common.h
src/main/native/smithwaterman/: CMakeLists.txt  IntelSmithWaterman.cc  IntelSmithWatermanCSource.cpp  PairWiseSW.h  avx2_impl.cc  avx2_impl.h  avx512_impl.cc  avx512_impl.h  smithwaterman_common.h
src/main/native/utils/: CMakeLists.txt  utils.cc
